--- a/electographs/app/views/layouts/application.html.erb
+++ b/electographs/app/views/layouts/application.html.erb
@@ -5,13 +5,13 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
   <%= csrf_meta_tags %>
-
   <base href="/application.html.erb">
+  <link rel="stylesheet" href="/assets/style.css">
 
 </head>
-<body ng-app="app">
+<body ng-app="app" class="backgroundImage">
 
-    <div class="container" ng-view></div>
+    <div ng-view></div>
     
 </body>
 </html>
