--- a/electographs/public/partials/home.html
+++ b/electographs/public/partials/home.html
@@ -1,49 +1,139 @@
 <div class="row">
-  <div class="col-lg-3 col-sm-3 col-xs-3" id="wrapper">
+  <div class="col-lg-8 text-left">
+    <h1 class="bigBlack"># C A N D I D A T E   S O C I A L</h1>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-lg-2 col-sm-2 col-xs-2" id="wrapper">
     <div id="sidebar-wrapper">
-      <h3 ng-click="vm.showCandidate()" class="candidateThumbnails" src="/assets/Drawing.jpg}"alt="Photo of logo"> about photo
-      </h3>
-            <h3 ng-click="vm.showCandidate()" class="candidateThumbnails" src="/assets/Drawing.jpg}"alt="Photo of logo"> all candidates photo
-      </h3>
-      <h3 ng-repeat='candidate in vm.Candidates'>
+    <img ng-click="vm.showCandidate()" class="candidateThumbnails" src="/assets/about.png"alt="Photo of logo"/></br>
+    <img ng-click="vm.showCandidate()" class="candidateThumbnails" src="/assets/all.png"alt="Photo of logo"/>
+      <div ng-repeat='candidate in vm.Candidates'>
         <img ng-mouseover="ya = !ya" ng-mouseleave="ya =!ya" ng-click="vm.showCandidate(candidate.id)" class="candidateThumbnails"src="{{candidate.picture}}"alt="Photo of {{candidate.name}}"/>
         <h4 ng-if="ya">{{candidate.name}}</h4>
         <h5 ng-if="ya">{{candidate.party}} Party</h5>
-      </h3>
+      </div>
     </div>
   </div>
-    <div class="col-lg-9 text-center">
-      <h1>Candidate Social</h1>
-      <div class="row">
-        <div class="col-lg-9 col-md-9 col-sm-9  col-xs-9">
-          <div class="infographic" ng-if="!vm.chosenCandidate">
-            <h3>This can be an infographic about the project</h3>
+
+  <div class="col-lg-10">
+    <div class="row">
+      <div class="col-lg-11 col-md-11 col-sm-11 col-xs-11">
+
+
+              <!--       about -->
+        <div class="infographic container" ng-if="!vm.chosenCandidate">
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+              <h2 class="red">ABOUT THE APP </h2>
+              <div class="row">
+                <div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
+                  <div class="row">
+                    <div class="col-lg-6 col-md-16 col-sm-6 col-xs-6">
+                     <h3 class="black">DID  YOU  KNOW...</h3>
+                    </div>
+                  </div>
+                    <div class="row">
+                    <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
+                    </div>
+                    <div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
+                  <h3 class="blackInverse" id="smallText"><strong>Less than</strong> 55% of eligible voters voted in the last Presidential Election.</h3>
+                    </div>
+                  </div>
+                  <div clas="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                      <h3><img src="/assets/voters.png"></h3>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5" id="static">
+                <h3 class="black"># A N A L Y Z E</h3> 
+                <h4>Check out the twitter accounts of candidates you are interested in. See everything from their most popular tweets right now, to their first ( and most likely embarrassing) tweet ever! </h4>
+                <h3 class="black"># C O M P A R E</h3> 
+                <h4>See how your favorite candidates stack up again others.</h4>
+                <h3 class="black"># S H A R E</h3> 
+                <h4>Candidate Social offers you relevant shareable infographics with your friends. Unlike most graphics that become obsolete soon after they are posted, Candidate Social’s analyzations are always current. </h4>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="infographic" ng-if="vm.chosenCandidate">
+        </div>
+
+
+    <!--       specific candidate -->
+          <div class="infographic container" ng-if="vm.chosenCandidate">
+            
             <div class="row">
-              <div class="col-lg-8">
-                <h4>{{vm.chosenCandidate.name}}</h4>
-                <h4>{{vm.chosenCandidate.handle}}</h4>
-                <h5> {{vm.chosenCandidate.party}}</h5>
-                <h5> {{vm.chosenCandidate.location}}</h5>
-                <h5> {{vm.chosenCandidate.description}}</h5>
-                <h3>Total Tweets {{vm.chosenCandidate.statuses_count}}</h3>
+              <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 ">
+                <h2 ng-if="vm.chosenCandidate.party == 'Republican'" class="red">{{vm.chosenCandidate.name}}</h2>
+                <h2 ng-if="vm.chosenCandidate.party == 'Democratic'" class="blue">{{vm.chosenCandidate.name}}</h2>
+<!--                 <div class="row">
+                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <div class=" text-center">
+                      <h4> #FOLLOWERS</h4>
+                      <h4>{{vm.chosenCandidate.followers_count}}</h4>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-4 col-sm-4 text-center col-xs-4">
+                    <div>
+                      <h4>#TOTALTWEETS</h4>
+                      <h4>{{vm.chosenCandidate.statuses_count}}</h4>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-4 text-center col-sm-4 col-xs-4">
+                    <div>
+                      <h4> #FOLLOWING</h4>
+                      <h4>{{vm.chosenCandidate.friends_count}}</h4>
+                    </div>
+                  </div>
+                </div> -->
+                <div class="row">
+                  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                    <div class="circle">
+                      <h2> #F I R S T T W E E T</h2>
+                        <h5>"{{vm.chosenCandidate.first_tweet}}"</h5>
+                    </div>
+                    <h4 class="blackInverse">Average tweets per day: {{vm.tweetsPerDay | number:2 }}</h4>
+                  </div>
+                  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                    <h4 class="black">Twitter account created on {{vm.acctCreatedAt}}</h4>
+                    <div id="circleInverse">
+                      <h2> #L A S T T W E E T</h2>
+                        <h5>"{{vm.chosenCandidate.most_recent_tweet}}"</h5>
+                    </div>              
+                  </div>              
+                </div>
+              </div>
+
+
+
+<!--                 <h3>Total Tweets {{vm.chosenCandidate.statuses_count}}</h3>
                 <h3>Account Created on {{vm.acctCreatedAt}}</h3>
                 <h3>Average tweets per day {{vm.tweetsPerDay}}</h3>
                 <h3>Followers {{vm.chosenCandidate.followers_count}}</h3>
-                <h3>Following {{vm.chosenCandidate.friends_count}}</h3>
-              </div>
-            <div class="col-lg-4">
+                <h3>Following {{vm.chosenCandidate.friends_count}}</h3> -->
+            <div class="col-lg-3 col-xs-3 col-md-3 col-sm-3 text-right" id="static">
               <h4><img class="candidatePhoto"src="{{vm.chosenCandidate.picture}}"></h4>
-              <p ng-repeat="tweet in vm.chosenCandidate.tweets">
-                {{tweet.text}}</br>
-                {{tweet.posted_at}}</br>
-                Favors: {{tweet.favorite_count}}</br>
-                Retweets: {{tweet.retweet_count}}</br>
-
+                <h5><a href="https://twitter.com/{{vm.followHandle}}"><img height="40px" width="40px" src="assets/tweetBird.png"/>Follow {{vm.chosenCandidate.handle}}</a></h5>
+                <h4 ng-if="vm.chosenCandidate.party == 'Republican'" class="blue"> A B O U T</h4>
+                <h4 ng-if="vm.chosenCandidate.party == 'Democratic'" class="red">A B O U T</h4>
+              <h5><b>M</b>ember of the {{vm.chosenCandidate.party}} Party</h5>
+              <h5><b>F</b>rom {{vm.chosenCandidate.location}}</h5>
+              <h5><b>T</b>witter Description:</h5><h6>"{{vm.chosenCandidate.description}}"</h6>
             </div>
           </div>
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <h1>CHARTS CHARTSCHARTSCHARTS CHARTSCHARTS CHARTS CHARTS CHARTS CHARTS CHARTS
+            CHARTS CHARTSCHARTSCHARTS CHARTSCHARTS CHARTS CHARTS CHARTS CHARTS CHARTS
+            CHARTS CHARTSCHARTSCHARTS CHARTSCHARTS CHARTS CHARTS CHARTS CHARTS CHARTS
+            CHARTS CHARTSCHARTSCHARTS CHARTSCHARTS CHARTS CHARTS CHARTS CHARTS CHARTS
+          </h1>
+        </div>
       </div>
     </div>
+  </div>
 </div>
 
