--- a/electographs/app/assets/stylesheets/style.css
+++ b/electographs/app/assets/stylesheets/style.css
@@ -53,8 +53,8 @@ height: 240px;
 
 .circle
 {
-  height: 300px;
-  width: 300px;
+  height: 330px;
+  width: 330px;
   display: table-cell;
   text-align: center;
   color: white;
@@ -66,8 +66,8 @@ height: 240px;
 
 #circleInverse
 {
-  height: 300px;
-  width: 300px;
+  height: 330px;
+  width: 330px;
   display: table-cell;
   text-align: center;
   color: black;
@@ -88,6 +88,7 @@ height: 240px;
   vertical-align: middle;
   border-radius: 50%; /* may require vendor prefixes */
   background: black;
+
 }
 
 .dem
@@ -137,6 +138,19 @@ height: 240px;
   background: black;
 }
 
+.white
+{
+  height: 40px;
+  margin-bottom: 20px;
+  width: 100%;
+  text-align: center;
+  color: black;
+  padding-top: 5px;
+  vertical-align: middle;
+  background: white;
+  border: 2px solid black;
+}
+
 .blackInverse
 {
   height: 60px;
@@ -176,11 +190,60 @@ a:hover{
 }
 
 #static{
-  border-left: 10px solid black;
-  border-bottom: 10px solid black;
+  border-left: 5px solid black;
+  border-bottom: 5px solid black;
+  margin-bottom: 40px;
+  margin-right:0px;
 }
 
 
 #smallText{
   font-size: 20px;
+}
+
+#longSpace{
+  margin-top:40px;
+  margin-bottom:50px;
+}
+
+
+/*doublebarchart*/
+
+
+#tooltip {
+  position: absolute;
+  width: 300px;
+  height: auto;
+  padding: 10px;
+  background-color: black;
+  color:white;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+  pointer-events: none;
+}
+#tooltip.hidden {
+  display: none;
+}
+#tooltip p {
+  margin: 0;
+  font-family: sans-serif;
+  font-size: 12px;
+  line-height: 16px;
+}
+.indent{
+  padding-left: 5px;
+}
+
+rect {
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+rect:hover{
+  opacity: 0.4;
 }
