--- a/electographs/public/partials/home.html
+++ b/electographs/public/partials/home.html
@@ -7,8 +7,8 @@
 <div class="row">
   <div class="col-lg-2 col-sm-2 col-xs-2" id="wrapper">
     <div id="sidebar-wrapper">
-    <img class="candidateThumbnails" src="/assets/about.png"alt="Photo of logo"/></br>
-    <img ng-click="vm.TopTweets()" class="candidateThumbnails" src="/assets/all.png"alt="Photo of logo"/>
+    <img class="candidateThumbnails" ng-click"vm.showCandidate()" src="/assets/about.png"alt="Photo of logo"/></br>
+    <img ng-click="vm.showCandidate()" class="candidateThumbnails" src="/assets/all.png"alt="Photo of logo"/>
       <div ng-repeat='candidate in vm.candidateFollowSort'>
         <img ng-mouseover="ya = !ya" ng-mouseleave="ya =!ya" ng-click="vm.showCandidate(candidate.id)" class="candidateThumbnails"src="{{candidate.picture}}"alt="Photo of {{candidate.name}}"/>
         <h4 ng-if="ya">{{candidate.name}}</h4>
@@ -20,7 +20,6 @@
   <div class="col-lg-10">
     <div class="row">
       <div class="col-lg-11 col-md-11 col-sm-11 col-xs-11">
-
 
               <!--       about -->
         <div class="infographic container" ng-if="!vm.chosenCandidate">
@@ -67,7 +66,15 @@
               <h2 class="red">All Candidates</h2>
               <div class="row">
                 <div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
-                  <div bars-all data="data"> </div>
+                  <div bars-all data="data">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <a ng-click="vm.dataSwitch(vm.topTweetArray)"> followers</a>
+                <div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
+                  <div single-all data="dataData">
+                  </div>
                 </div>
               </div>
             </div>
