--- a/electographs/public/partials/doubleBar.html
+++ b/electographs/public/partials/doubleBar.html
@@ -1,18 +1,19 @@
 <div class="row">
-  <div class="col-lg-10 col-md-10 col-xs-10 col-sm-10">
-    <h3 class="black">MOST POPULAR TWEETS LAST 7 DAYS</h3>
+
+  <div class="col-lg-9 col-md-9 col-xs-9 col-sm-9">
+    <h3 class="black">MOST POPULAR TWEETS IN THE LAST 7 DAYS</h3>
   </div>
 </div>
 <div class="row">
-  <div class="col-lg-10 col-md-10 col-xs-10 col-sm-10 text-center">
+  <div class="col-lg-2 col-md-2 col-xs-2 col-sm-2">
+    <p class="red"># of times Favored</p>
+    <p class="blue"># of times Reweets</p></p>
+  </div>
+  <div class="col-lg-8 col-md-8 col-xs-8 col-sm-8 text-center">
     <div id="popularTweets">
       <div id="tooltip" class="hidden">
         <span id="tweetText"></span>
       </div>
     </div>
   </div>
-   <div class="col-lg-2 col-md-2 col-xs-2 col-sm-2">
-    <p class="red"># of times Favored</p>
-    <p class="blue"># of times Reweets</p></p>
-</div>
 </div>
