--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -245,6 +245,7 @@ a:hover{
   border-left: 5px solid black;
   border-bottom: 5px solid black;
   margin-bottom: 40px;
+  padding-left: 10px;
   margin-right:0px;
 }
 
