--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -19,6 +19,7 @@ margin-bottom:100px;
 
 .candidateThumbnails:hover{
   opacity: 1;
+  cursor: crosshair;
 }
 .candidatePhoto{
   height:100%;
@@ -27,19 +28,21 @@ margin-bottom:100px;
 
 #canNav{
   background-color: white;
-  margin-left: 0px;
+  margin-left: 0;
   position: absolute;
 }
 
 #sidebar-wrapper{
-  height:900px;
-  overflow: scroll;
+  height:870px;
+  margin-left: 10px;
+  overflow: auto;
 }
 
 #headbanner{
 background-color: black;
 height: 240px;
 }
+
 
 #circle{
   height: 280px;
@@ -231,6 +234,11 @@ height: 240px;
   box-shadow: 1px 2px 3px rgba(0,0,0,.5);
 }
 
+.bigBlack:hover{
+opacity: 1;
+cursor: crosshair;
+
+}
 
 
 a{
@@ -239,6 +247,7 @@ a{
 a:hover{
   background-color: black;
   color:white;
+  cursor: crosshair;
 }
 
 #static{
@@ -304,6 +313,7 @@ rect {
 }
 rect:hover{
   opacity: 0.4;
+
 }
 
 #talkBubble {
@@ -343,6 +353,7 @@ rect:hover{
     border-radius: 50%;
     width: 250px;
     height: 250px;
+    margin-top: 20px;
 }
 
 #least {
@@ -350,8 +361,9 @@ rect:hover{
     background-size: cover;
     background-position: 50%;
     border-radius: 50%;
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
+    margin-left: 40px;
 }
 
 #socialTags{
@@ -373,6 +385,8 @@ background-color: grey;
 #blackBack{
   background-color: black;
   margin: 10px;
+  color:white;
+  padding: 10px;
 }
 
 #centerText{
@@ -396,4 +410,9 @@ background-color: grey;
 
 #redLinks a :hover{
   color: #1020bd;
+  cursor: crosshair;
+}
+
+#whiteText{
+  color:white;
 }
