--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -199,16 +199,20 @@
                     </div>        
                   </div>              
                 </div>
-        <div class="row text-center" id="blackBord">
+        <div class="row text-center" id="blackBack">
           <div class= "col-lg-4 col-xs-4 col-md-4 col-sm-4 text-center">
-              <h4 id="circleGradient"><b>#FOLLOWERS</b> <br/>{{vm.chosenCandidate.followers_count}}</h4>
+            <h3>F O L L O W E R S</h3></br></br>
+              <h1 id="circleGradient"><b>{{vm.chosenCandidate.followers_count}}</b></h1>
           </div>
           <div class= "col-lg-4 col-xs-4 col-md-4 col-sm-4 text-center">
             <div id="longSpace"/>
-            <h4 id="circleGradient"><b>#TOTAL TWEETS</b> <br/>{{vm.chosenCandidate.statuses_count}}</h4>
+            <h1 id="circleGradient"><b>{{vm.chosenCandidate.friends_count}}</b></h1>
+            </br></br>
+            <h3>F O L L O W I N G</h3>
           </div>
           <div class= "col-lg-4 col-xs-4 col-md-4 col-sm-4 text-center">
-            <h4 id="circleGradient"><b>#FOLLOWING</b> <br/>{{vm.chosenCandidate.friends_count}}</h4>
+          <h3>T W E E T S</h3></br></br>
+          <h1 id="circleGradient"><b>{{vm.chosenCandidate.statuses_count}}</b></h1>
           </div>
         </div>
         <div class="row">
