--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,6 +1,8 @@
 body{ 
 color: white;
 background-color: black;
+font-family: "Palatino", serif;
+
 }
 
 .infographic{ 
@@ -79,15 +81,15 @@ height: 240px;
 
 #circleGradient
 {
-  height: 220px;
-  width: 220px;
+  height: 240px;
+  width: 240px;
   display: table-cell;
   text-align: center;
   color: black;
   vertical-align: middle;
   border-radius: 50%; /* may require vendor prefixes */
   background: white;
-  padding:10px;
+  padding:4px;
   border: 1px solid black;
   -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
   -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
@@ -259,7 +261,7 @@ a:hover{
 }
 
 #canTweets{
-  height:800px;
+  height:1000px;
   overflow: scroll;
 }
 
